--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,4 @@
-$gradient: linear-gradient(#e51726, #d4208c);
+$gradient: linear-gradient(10deg, #e51726, #d4208c);
 $gradient-text: -webkit-linear-gradient(#e51726, #d4208c);
 $colour-text: -webkit-linear-gradient(#e51726, #d4208c);
 
@@ -22,6 +22,18 @@ body {
     -webkit-text-fill-color: transparent;
 }
 
+button {
+    width: 387px;
+    height: 81px;
+    padding: 25px 51px 25px 51px;
+    border-radius: 10px;
+    border: none;
+    background: $gradient;
+    font-size: 23px;
+    font-weight: 800;
+    color: white;
+}
+
 ol {
     counter-reset: list-counter;
 }
@@ -43,7 +55,7 @@ ol li::before {
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     position: absolute;
-    left: -40px;
+    left: -60px;
     top: 0;
     font-weight: 800;
 }
