--- a/src/styles.scss
+++ b/src/styles.scss
@@ -59,3 +59,69 @@ ol li::before {
     top: 0;
     font-weight: 800;
 }
+
+.modal {
+    display: flex;
+    position: fixed;
+    z-index: 1;
+    background-color: rgba(255, 255, 255, 0.718);
+    width: 100%;
+    height: 100vh; 
+    align-items: center;
+    justify-content: center;
+    top: 0px;
+    left: 0px;
+}
+
+.modal-content {
+    background-color: #fefefe;
+    padding: 20px;
+    border-radius: 50px;
+    width: 1270px;
+    height: 625px;
+    text-align: center;
+}
+
+#signupForm {
+    display: flex;
+    flex-direction: column;
+    max-width: 620px;
+    margin: 0 auto;
+    justify-content: center; 
+    align-items: center; 
+    height: 100%;
+}
+
+input[type="email"],
+input[type="password"] {
+    border: none;
+    outline: none;
+    width: 100%;
+    border-bottom: 1px solid #3A3A3A;
+    padding: 1em;
+    margin-top: 10px;
+    margin-bottom: 30px;
+}
+
+input[type="email"]::placeholder,
+input[type="password"]::placeholder {
+    color: #B3B3B3; 
+    opacity: 1; 
+    text-align: center;
+    font-size: 18px;
+    font-weight: 400;
+}
+
+
+.close {
+    font-size: 80px;
+    cursor: pointer;
+    margin-left: 100%;
+    background: linear-gradient(90deg, #e51726, #d4208c);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.hidden {
+    display: none;
+}
